Add jugadores y equipos, add privacy

--- a/Views/Home/AgregarEquipo.cshtml
+++ b/Views/Home/AgregarEquipo.cshtml
@@ -47,11 +47,9 @@
         </div>
 
         <div class="form-group mb-4">
-            <label class="h5">Video presentación (link):</label>
+            <label class="h5">Video presentación (link youtube):</label>
             <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="text" class="form-control shadow" name="Video" placeholder="Video..." autocomplete="off">
         </div>
         
-        <button type="submit" class="btn btn-dark mt-4">Crear equipo</button>
+        <button type="submit" class="btn btn-dark mt-4 mb-5">Crear equipo</button>
     </form>
-
-    <br><br><br><br>
