--- a/Views/Home/AgregarJugador.cshtml
+++ b/Views/Home/AgregarJugador.cshtml
@@ -35,7 +35,6 @@
             <input type="file" class="form-control-file d-flex justify-content-end opacity-75" name="Foto" autocomplete="off" required>
         </div>
         
-        <button type="submit" class="btn btn-dark mt-4">Crear jugador</button>
+        <button type="submit" class="btn btn-dark mt-4 mb-5">Crear jugador</button>
     </form>
 
-    <br><br><br><br>
