--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
 
+<h1 class="mt-5">@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p class="h5 mt-4">All the rights reserved to <a href="https://campus.ort.edu.ar/secundaria/almagro/">Ort Argentina</a></p>
