--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,11 +35,12 @@
         </main>
     </div>
 
-    <footer class="shadow-lg footer text-muted">
+    <footer class="sombra footer text-muted colorFooter">
         
         <div class="container">
             &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
+
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
