--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
     <div class="container"> 
-        <h1 class="mt-5 mb-5 text-center">Equipos</h1>
+        <h1 class="mt-5 mb-5 text-center">EQUIPOS CLASIFICADOS</h1>
 
         <div class="row mb-4">
             @foreach (Equipo equi in @ViewBag.Lista)
             {
                 <div class="col-sm d-flex mb-3 justify-content-center">
-                    <div class="card text-center shadow" style="width: 330px; height:450px; background:rgba(255,255,255, 0.05); border-radius:5%">
-                        <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="flex-item"><img src="/equipos/@equi.Escudo" class="card-img-top p-4" width="100%" height="330px" alt="..." style="object-fit: cover;"></a>                            
+                    <div class="contenedor card text-center sombra mb-4" style="width: 330px; height:450px; background:rgba(255,255,255, 0.05); border-radius:5%">
+                        <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="flex-item"><img src="/equipos/@equi.Escudo" class="card-img-top p-4 imagen" width="100%" height="330px" alt="..." style="object-fit: cover;"></a>                            
                         <div class="card-body">
                             <h5 class="card-title mb-3 text-light">@equi.Nombre</h5>                                     
                             <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="btn btn-outline-light">Ver equipo</a>
@@ -20,7 +20,7 @@
             } 
 
             <center>
-                <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-light mt-5 mb-5 w-25" style="color: #70102C;">Agregar equipo +</a>       
+                <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-light mt-1 mb-5 w-25" style="color: #70102C;">Agregar equipo +</a>       
             </center>
 
 
