--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,7 +9,8 @@ body{
 }
 
 footer{
-  background-color: #6d102a;
+  background-color: #610f26;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 h1{
@@ -59,3 +60,20 @@ header{
   background-color: white;  
   color: #70102C;
 }
+
+.contenedor:hover .imagen {-webkit-transform:scale(1.3);transform:scale(1.3);}
+.contenedor {overflow:hidden;}
+
+.filaJugador:hover{
+  background-color: rgba(200, 200, 200, 0.8);
+}
+
+.jugador{
+  text-decoration: none;
+}
+
+.sombra{
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+
