--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
             {
                 <div class="col-sm d-flex mb-3 justify-content-center">
                     <div class="contenedor card text-center sombra mb-4" style="width: 330px; height:450px; background:rgba(255,255,255, 0.05); border-radius:5%">
-                        <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="flex-item"><img src="/equipos/@equi.Escudo" class="card-img-top p-4 imagen" width="100%" height="330px" alt="..." style="object-fit: cover;"></a>                            
+                        <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo, IdJugador=0})' class="flex-item"><img src="/equipos/@equi.Escudo" class="card-img-top p-4 imagen" width="100%" height="330px" alt="..." style="object-fit: cover;"></a>                            
                         <div class="card-body">
                             <h5 class="card-title mb-3 text-light">@equi.Nombre</h5>                                     
-                            <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo})' class="btn btn-outline-light">Ver equipo</a>
+                            <a href='@Url.Action("VerDetalleEquipo","Home", new {IdEquipo=equi.IdEquipo, IdJugador=0})' class="btn btn-outline-light">Ver equipo</a>
                         </div>
                     </div> 
                 </div>                              
