--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="~/Qatar22.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <!--
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow shadow mb-3">
             <div class="container"> 
-                <img src="/imagenes/LogoNav.png" alt="" class="justify-content-center" width="13%" height="auto">   
+                <img src="/sources/logo.png" alt="" class="justify-content-center" width="10%" height="auto">   
                            
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -22,13 +23,33 @@
                  <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="nav flex-grow-1 justify-content-end">
                         <li class="nav-item">
-                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: white;">Qatar 2022</a>
+                            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color: white; font-size: 35px;">Home</a>
                         </li>                                         
                     </ul>
                  </div>
             </div>
         </nav>
     </header>
+    -->
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light box-shadow">
+            <img class="navbar-brand" src="/sources/logo.png" height="125">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 30px;">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
