--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="container"> 
-        <h1 class="mt-5 mb-5 text-center">EQUIPOS CLASIFICADOS</h1>
-
+    <div class="container mt-5"> 
+        
         <div class="row mb-4">
             @foreach (Equipo equi in @ViewBag.Lista)
             {
