--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     -->
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light box-shadow">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow shadow mb-3">
             <img class="navbar-brand" src="/sources/logo.png" height="125">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
