--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,14 +34,14 @@
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow shadow mb-3">
-            <img class="navbar-brand" src="/sources/logo.png" height="125">
+            <img class="navbar-brand" src="/sources/logo.png" height="125" style="margin-left: 50px;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 30px;">Home</a>
+                        <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index" style="font-size: 30px;">Qatar 2022</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
     <footer class="sombra footer text-muted colorFooter">
         
         <div class="container">
-            &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy" target="_blank">Privacy</a>
         </div>
 
     </footer>
