Terminar numero camiseta

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             } 
 
             <center>
-                <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-light mt-1 mb-5 w-25" style="color: #70102C;">Agregar equipo +</a>       
+                <a href='@Url.Action("AgregarEquipo","Home")' class="btn btn-light mt-1 mb-5 w-25" style="color: #70102C;" target="_blank">Agregar equipo +</a>       
             </center>
 
 
