--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -5,4 +5,4 @@
 
 <h1 class="mt-5">@ViewData["Title"]</h1>
 
-<p class="h5 mt-4">All the rights reserved to <a href="https://campus.ort.edu.ar/secundaria/almagro/">Ort Argentina</a></p>
+<p class="h5 mt-4">All the rights reserved to <a href="https://campus.ort.edu.ar/secundaria/almagro/" target="_blank">Ort Argentina</a></p>
