--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
     <footer class="sombra footer text-muted colorFooter">
         
         <div class="container">
-            &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy" target="_blank">Privacy</a>
+            &copy; 2022 - Qatar22 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
 
     </footer>
