--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -22,7 +22,7 @@
 
         <div class="flex-item">
 
-            <table class="table mt-5 " style="" >
+            <table class="table mt-5" style="" >
                 <thead class="thead bg-dark text-white text-center">
                     <tr>
                     <th scope="col">Nombre Jugador</th>
@@ -39,11 +39,11 @@
                     {
                         <tr class="filaJugador">
                             
-                            <th scope="row">@jug.Nombre</th>
-                            <td>@jug.NumCamiseta</td>
-                            <td><a href='@Url.Action("VerDetalleEquipo","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn" data-toggle="modal" data-target="#exampleModalCenter" style="color:blue;">Informacion Jugador</a></td>     
+                            <th scope="row" class="text-dark">@jug.Nombre</th>
+                            <td class="text-dark">@jug.NumCamiseta</td>
+                            <td><a href='@Url.Action("VerDetalleEquipo","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn" data-toggle="modal" data-target="#exampleModalCenter" style="color:blue;">Informacion</a></td>     
                             <td><a href='@Url.Action("EliminarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-danger">Borrar jugador</a></td>
-                            <td><a href='@Url.Action("EditarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-warning">Editar jugador</a></td>   
+                            <td><a href='@Url.Action("EditarJugador","Home", new {IdJugador=@jug.IdJugador, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn btn-warning text-light">Editar jugador</a></td>   
                         </tr>               
                     }
                         
@@ -51,7 +51,7 @@
             </table>
 
             <a href='@Url.Action("AgregarJugador","Home", new {IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})' class="btn boton mt-2 mb-5 shadow" style="float: left;" target="_blank">Agregar jugador +</a>
-
+           
         </div>
 
         @if(@ViewBag.DetalleJugador != null){
@@ -62,9 +62,9 @@
                     <span class="close">&times;</span>                    
                     
                     <h1 class="mt-2" style="color: #70102C;">@ViewBag.DetalleJugador.Nombre</h1>
-                    <img src="/jugadores/@ViewBag.DetalleJugador.Foto" alt="" class="mt-3 shadow-lg" width="35%" height="auto" style="margin-left: 32%;">
-                    <h5 class="mt-4">Fecha de nacimiento: @ViewBag.DetalleJugador.FechaNacimiento.ToShortDateString().</h5>
-                    <h5 class="mt-1 mb-3">Equipo: @ViewBag.DetalleJugador.EquipoActual. </h5>   
+                    <img src="/jugadores/@ViewBag.DetalleJugador.Foto" alt="" class="mt-3 shadow-lg" width="35%" height="auto" style="margin:auto;">
+                    <h5 class="mt-4 text-dark">Fecha de nacimiento: @ViewBag.DetalleJugador.FechaNacimiento.ToShortDateString().</h5>
+                    <h5 class="mt-1 mb-3 text-dark">Equipo: @ViewBag.DetalleJugador.EquipoActual. </h5>   
                     
                 </div>
 
@@ -83,7 +83,6 @@
                 });
             });
 
-
         </script>
         -->
     </div>
@@ -91,25 +90,21 @@
     @if(@ViewBag.DetalleJugador != null){
 
     <script type ="text/javascript">
+
         var modal = document.getElementById("myModal");
-
-        // Get the button that opens the modal
+        
         var btn = document.getElementById("myBtn");
-
-        // Get the <span> element that closes the modal
+        
         var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks on the button, open the modal
+        
         function openModal() {
         modal.style.display = "block";
         }
-
-        // When the user clicks on <span> (x), close the modal
+        
         span.onclick = function() {
         modal.style.display = "none";
         }
 
-        // When the user clicks anywhere outside of the modal, close it
         window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
