--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -4,6 +4,7 @@
 }
 *{
   font-family: qatarFont;
+  color: white;
 }
 
 html {
@@ -13,24 +14,11 @@ html {
 
 body{
   background-color: #70102C;
-  color: white;
 }
 
 footer{
   background-color: #610f26;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-}
-
-h1{
-  color: white;
-}
-
-h4{
-  color: white;
-}
-
-p{
-  color: white;
 }
 
 .blanco{
@@ -85,19 +73,18 @@ header{
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .modal-content {
   margin: auto;
   margin-top: 7%;
@@ -109,7 +96,6 @@ header{
   color: #4a0d1e;
 }
 
-/* The Close Button */
 .close {
   margin-left: 96%;
   float: right;
