--- a/Views/Home/AgregarJugador.cshtml
+++ b/Views/Home/AgregarJugador.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "AgregarJugador";
 }
 
-<h1 class="mt-5">Crear jugador</h1>
+<h1 class="mt-5">Crear jugador</h1>    
 
     <form class="mt-4" method="post" action='@Url.Action("GuardarJugador", "Home")' enctype="multipart/form-data">
 
@@ -26,8 +26,14 @@
         </div>      
 
         <div class="form-group mb-4">
-            <label class="h5">Número de camiseta:</label>
+            <label class="h5">Número de camiseta: </label>
+               
             <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;"  type="number" class="form-control opacity-75" name="NumCamiseta" placeholder="Numero de camiseta del jugador..." autocomplete="off" required>
+            @if (@ViewBag.CamisetaRepetida == "true")
+            {
+                <h5 class="amarillo mt-1">Ya existe un jugador con esa camiseta</h5>                
+            }   
+      
         </div>  
 
         <div class="form-group mb-4">
