--- a/Views/Home/AgregarEquipo.cshtml
+++ b/Views/Home/AgregarEquipo.cshtml
@@ -12,7 +12,7 @@
       
         <div class="form-group mb-4">
             <label class="h5">Nombre del equipo:</label>
-            <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="text" class="form-control opacity-75" name="Nombre" placeholder="Nombre del equipo..." autocomplete="off" required>
+            <input type="text" class="form-control opacity-75 forms" name="Nombre" placeholder="Nombre del equipo..." autocomplete="off" required>
             
         </div>
 
@@ -30,7 +30,7 @@
 
         <div class="form-group mb-4">
             <label class="h5">Continente:</label>
-            <select style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color: white;" class="form-select opacity-75 shadow" name="Continente" placeholder="Continente..." autocomplete="off" required>
+            <select class="form-select opacity-75 shadow forms" name="Continente" placeholder="Continente..." autocomplete="off" required>
                 <option value="" disabled selected hidden>Continente...</option>
                 <option value="Africa" class="bg-secondary">Africa</option>
                 <option value="America" class="bg-secondary">America</option>
@@ -38,17 +38,16 @@
                 <option value="Asia" class="bg-secondary">Asia</option>
                 <option value="Oceania" class="bg-secondary">Oceania</option>
             </select>
-            
         </div>
 
         <div class="form-group mb-4">
             <label class="h5">Copas ganadas:</label>
-            <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="number" class="form-control shadow" name="CopasGanadas" placeholder="Copas ganadas..." autocomplete="off" required>
+            <input type="number" class="form-control shadow forms" name="CopasGanadas" placeholder="Copas ganadas..." autocomplete="off" required>
         </div>
 
         <div class="form-group mb-4">
             <label class="h5">Video presentación (link youtube):</label>
-            <input style="background:rgba(255,255,255, 0.05); border-color:rgba(255,255,255, 0.05); color:white;" type="text" class="form-control shadow" name="Video" placeholder="Video..." autocomplete="off">
+            <input type="text" class="form-control shadow forms" name="Video" placeholder="Video..." autocomplete="off">
         </div>
         
         <button type="submit" class="btn btn-dark mt-4 mb-5">Crear equipo</button>
