--- a/Views/Home/DetalleEquipo.cshtml
+++ b/Views/Home/DetalleEquipo.cshtml
@@ -3,9 +3,9 @@
 }
 
 <body>
-    <div class="flex-container">
+    <div class="flex-container detalleequipo">
 
-        <div class="flex-item mb-5">
+        <div class="flex-item mb-5 col-12 col-md-6">
             
             <h1 class="mt-4">@ViewBag.DetalleEquipo.Nombre</h1>
             <img src="/equipos/@ViewBag.DetalleEquipo.Escudo" alt=""class="mt-4 w-25">
@@ -20,7 +20,7 @@
             
         </div>
 
-        <div class="flex-item">
+        <div class="flex-item col-12 col-md-6">
 
             <table class="table mt-5" style="" >
                 <thead class="thead bg-dark text-white text-center">
@@ -56,10 +56,10 @@
 
         @if(@ViewBag.DetalleJugador != null){
             
-            <div id="myModal" class="modal">
+            <div id="modal" class="modal">
 
                 <div class="modal-content sombra text-center">
-                    <span class="close">&times;</span>                    
+                    <a class="cruz" href='@Url.Action("VerDetalleEquipo","Home", new {IdJugador=0, IdEquipo=@ViewBag.DetalleEquipo.IdEquipo})'>&times;</a>                    
                     
                     <h1 class="mt-2" style="color: #70102C;">@ViewBag.DetalleJugador.Nombre</h1>
                     <img src="/jugadores/@ViewBag.DetalleJugador.Foto" alt="" class="mt-3 shadow-lg" width="35%" height="auto" style="margin:auto;">
@@ -70,50 +70,32 @@
 
             </div>
         }
-        
-        <!--
-         <script>
-            
-            
-            ESTE CODIGO TAN LINDO NO LO TERMINAMOS USANDO PERO FUE UN GRAN LOGRO 
-            const botones = document.querySelectorAll(`button`);
-            botones.forEach( (e) => {
-                if(e.id) e.addEventListener('click', () => {
-                    
-                });
-            });
-
-        </script>
-        -->
     </div>
 
     @if(@ViewBag.DetalleJugador != null){
 
-    <script type ="text/javascript">
+        <script type ="text/javascript">
+            var modal = document.getElementById("modal");
+                
+            var cerrar = document.getElementsByClassName("cruz")[0];
+                
+            function abrirModal() {
+                modal.style.display = "block";
+            }
+                
+            cerrar.onclick = function() {
+                modal.style.display = "none";
+            }
 
-        var modal = document.getElementById("myModal");
-        
-        var btn = document.getElementById("myBtn");
-        
-        var span = document.getElementsByClassName("close")[0];
-        
-        function openModal() {
-        modal.style.display = "block";
-        }
-        
-        span.onclick = function() {
-        modal.style.display = "none";
-        }
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
 
-        window.onclick = function(event) {
-        if (event.target == modal) {
-            modal.style.display = "none";
-        }
-        }
+            abrirModal(); 
 
-        openModal();
-
-    </script>
+        </script>
 
     }
 </body>
