--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewData["Title"] = "Home Page";
 }   
 
-    <button id="boton" class="btn btn-light mt-1 mt-5 w-25" style="color: #70102C; display: block;"> Filtrar por... </button>
     
+    <button id="boton" class="btn btn-outline-secondary mt-1 mt-5 w-25" style="color:white; display: block;">Filtrar por...</button>
+          
     <div id="modal" class="modal">
         <div class="modal-contento sombra text-center">
             <span class="cruz">&times;</span>                    
